package com.example.myarena.domain;

public enum TerrainType {
    FOOTBALL,
    TENNIS,
    BASKETBALL,
    SWIMMING,
    OTHER
}
